syntax = "proto3";   
package pb;
import "errorCode.proto";
import "messageCommand.proto";
import "enum.proto";

//所有的客户端请求，都是这个数据结构
message ReqPackage{
	MessageCommand Cmd=1;   //message command
	string Token=2;     	//每个消息都带token
	bytes Msg=3;			//所有的请求，都在这里
}

//所有的服务器响应，都是这个数据结构
message RespPackage{
	MessageCommand Cmd=1;   //message command
	ErrorCode ErrCode=2; 	//响应结果
	bytes Msg=3;			//所有的回应，都在这里
}

//用户基本数据
message UserBaseInfo{
	string NickName=1;
	string Icon=2;
	EnumSex Sex=3;
	uint32 Age=4;
	uint32 Vip=5;
	uint32 Lv=6;
}


//用户的货币数据
message UserMoneyInfo{
	uint32 Gold=1;
	uint32 Diamond=2;
}

//请求用户信息
message ReqUserInfo{
	
}

//响应用户信息
message RespUserInfo{
	UserBaseInfo BaseInfo=1;
	UserMoneyInfo MoneyInfo=2;
}

//请求创建房间
message ReqCreateRoom{

}

//响应创建房间
message RespCreateRoom{
	uint32 RoomId=1;	//房间Id
	string RoomName=2;	//房间名称
	string MapName=3;   //地图名称
	uint32 MaxNum=4;	//最多人数
	uint32 CurNum=5;	//当前人数	
}

//请求加入房间
message ReqJoinRoom{
	uint32 RoomId=1;
}

//响应加入房间
message RespJoinRoom{
	
}


